--- a/app/src/main/res/layout/cheat_activity.xml
+++ b/app/src/main/res/layout/cheat_activity.xml
@@ -20,6 +20,6 @@
         android:id="@+id/showAnswerButton"
         android:text="@string/show_answer_button"
         android:clickable="true"
-        android:backgroundTint="#ffc107"/>
+        android:theme="@style/AppTheme"/>
 
 </LinearLayout>
