--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -11,7 +11,8 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context="com.example.hashim.biblequiz.QuizActivity"
-    android:clickable="true">
+    android:clickable="true"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,4 +76,14 @@
             android:layout_marginLeft="3dp"/>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:id="@+id/cheat_button"
+        android:background="#f51f2d"
+        android:text="@string/cheat_button"
+        android:layout_marginTop="150dp"
+        android:clickable="true" />
 </LinearLayout>
